k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: song-service-svc
spec:
  type: NodePort
  selector:
    app: song-service
  ports:
    -  port: 1234
       targetPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: song-service-test-svc
spec:
  type: NodePort
  selector:
    app: song-service-test
  ports:
    -  port: 6543
       targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: rest-test-svc
spec:
  type: NodePort
  selector:
    app: rest-test
  ports:
    -  port: 6542
       targetPort: 8070
---
apiVersion: v1
kind: Service
metadata:
  name: artist-service-svc
spec:
  type: NodePort
  selector:
    app: artist-service
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
  ports:
    -  name: grpc
       port: 1235
       targetPort: 9080
    -  name: http
       port: 80
       targetPort: 80
       protocol: TCP
    -  name: https
       port: 443
       targetPort: 443
       protocol: TCP
    -  name: proxied-tcp-9000
       port: 9000
       targetPort: 9000
       protocol: TCP
